# msl_skycrane_description

./: CMakeLists.txt  README.md  frames.gv  manifest.xml  package.xml  urdf.rviz
launch/: display.launch  gazebo.launch  localization.launch  world.launch
meshes/: arm.STL  arm_1.STL  arm_2.STL  arm_3.STL  base_link.STL  bot_plate.STL  bottom_plate.STL  elbow00.STL  elbow10.STL  elbow11.STL  elbow20.STL  elbow21.STL  elbow30.STL  elbow31.STL  elbow_01.STL  elbow_11.STL  elbow_30.STL  engine00.STL  engine01.STL  engine10.STL  engine11.STL  engine20.STL  engine21.STL  engine31.STL  engine_00.STL  engine_01.STL  engine_10.STL  engine_11.STL  engine_20.STL  engine_21.STL  engine_30.STL  left_down_arm.STL  left_upper_arm.STL  right_down_arm.STL  right_upper_arm.STL  shoulder00.STL  shoulder10.STL  shoulder11.STL  shoulder20.STL  shoulder21.STL  (+25 more)
msg/: CmdMotorPower.msg  CmdMotorPowerStamped.msg
robots/: landing _engines.xacro  landing_engines.xacro  materials.urdf.xacro  msl_skycrane.URDF  msl_skycrane.sdf  msl_skycrane_description.xacro
